feat: add support for generating Jupyter notebooks for primary entities